# thermal-printer-server

./: .containerignore  .env.example  Containerfile  README.md  compose.yaml  config.py  main.py  models.py  printer_service.py  pyproject.toml  utils.py
static/: main.js  style.css
templates/: index.html
