[project]
name = "thermal-printer-server"
version = "0.1.0"
description = "Thermal printer HTTP server with FastAPI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi[standard]>=0.135.1",
  "pillow>=12.1.1",
  "pydantic>=2.12.5",
  "python-dotenv>=1.2.2",
  "python-escpos[usb]>=1.0.2",
]
