[project]
name = "thermal-printer-server"
version = "1.0.1"
description = "Thermal printer HTTP server with FastAPI"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [{ name = "MidoriKurage", email = "kuragectl@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.135.2",
  "jinja2>=3.1.6",
  "pillow>=12.1.1",
  "pydantic>=2.12.5",
  "python-dotenv>=1.2.2",
  "python-escpos[usb]>=1.0.2",
  "uvicorn>=0.42.0",
]
